@@ -1,3 +1,8 @@
+Tue Oct  9 17:13:27 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (rb_execarg_addopt, rb_execarg_run_options): add :uid and
+	  :gid options.  [ruby-core:47414] [Feature #6975]
+
 Tue Oct  9 14:36:11 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* iseq.c (iseq_free): fix memory leak.
